--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ function setup() {
     var c = color(red,green,blue, alpha);
     spots[i] = new Spot(w/2,h/2,random(1,50),random(-7,7), random(-7,7),c,i);
     
-   img = loadImage("cojo2901/piano.jpg");  // Load an image into the program
+   img = loadImage("piano.jpg");  // Load an image into the program
 
   }
   stroke(255,255,255,100);
