--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ function draw() {
    image(img, 0, 500);  // Display at full opacity
 
   tint(200, 100);  // Display at half opacity
- //image(img, offset, 0);
+ image(img, offset, 0);
   
    if (keyIsDown(DOWN_ARROW)) {
       if (numSpots > 0) {
