--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
-<!-- Codes by HTML.am -->
-
-<!-- CSS Code -->
+<!DOCTYPE html>
+<html>
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>HTML5 Bouncing Ball</title>
 <style type="text/css" scoped>
 .GeneratedText {
 font-family:'Comic Sans MS';font-size:2em;letter-spacing:0.2em;line-height:1.3em;color:#330099;background-color:#CCFFFF;padding:1.5em;
@@ -36,4 +38,8 @@ color:#FF9900;
 <center><a class="GeneratedLink" href="http://www.quackit.com" target="_blank">Assignment 2</a></center>
 <center><a class="GeneratedLink" href="http://www.quackit.com" target="_blank">Assignment 3</a></center>
 <center><a class="GeneratedLink" href="http://www.quackit.com" target="_blank">Assignment 4</a></center>
+
+</head>
+</html>
+
 
