--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ color:#FF9900;
 <center><a class="GeneratedLink" href="http://www.quackit.com" target="_blank">Assignment 1</a></center>
 <center><a class="GeneratedLink" href="http://www.quackit.com" target="_blank">Assignment 2</a></center>
 <center><a class="GeneratedLink" href="http://www.quackit.com" target="_blank">Assignment 3</a></center>
-<center><a class="GeneratedLink" href=" cojo2901/project3.html " target="_blank">Assignment 4</a></center>
+<center><a class="GeneratedLink" href="project3.html" target="_blank">Assignment 4</a></center>
 
 </head>
 </html>
