--- a/project2.html
+++ b/project2.html
@@ -1,104 +1,197 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>HTML5 Bouncing Ball</title>
-	<script src="p5.min.js"></script>
-	<script src="dat.gui.min.js"></script>
-	<script>
-	var shapeMax;
-	var bgcolor = 0;
-	var stkColor = 255;
-	var shapeSize;
-	var bottom;
-	var w;
-	var h;
-	var angle = 0;
-	var cd = 0;
-	var ca = 1;
-	var ra = -1.0;
-	var aa = 1.0;
-	var strokeOff = true;
-	var resetBG = false;
-	var text;
-	var gui;
-	var fR;
-	function setup() {
-		frameRate(60);
-		w = windowWidth;
-		h = windowHeight;
-		//WEBGL  diffrent rendering options
-		createCanvas(w, h, WEBGL);
-		background(bgcolor);
-		shapeMax = Math.floor(h * 0.70);
-		shapeSize = shapeMax;
-		// dat.GUI stuff
-		var datInterface = function() {
-			this.message = 'talk to me';
-			this.alpha = 64;
-			this.frameRate = 60;
-			this.displayOutline = true;
-			this.randomColor = function() { 
-				// define explode function
-				//alert("EXPLODED!!!")
-				this.color = [random(0,255),random(0,255),random(0,255)];
-				gui.__controllers[5].upDateDisplay();
-			};
-			this.color = [0,128,255];
-			this.float =0.0001;
-		};
-		text = new datInterface();
-		gui = new dat.GUI();
-		gui.add(text, 'message');
-		fR = gui.add(text, 'frameRate',5,60); // use for controller
-		gui.add(text, 'alpha', 0, 255);
-		gui.add(text, 'displayOutline');
-		gui.add(text, 'randomColor');
-		gui.addColor(text,'color');
-		gui.add(text,'float',0,1);
-		fR.onChange(function(value) {
-			frameRate(value);
-		});
-	}
-	function keyTyped() {
-		if (key == 's') {
-			text.displayOutline =! text.displayOutline 
-			gui.__controllers[3].upDateDisplay();
-		}
-	}
-	function draw() {
-		background(color(0,0,0,1));
-		noStroke(); 
-		rectMode(CENTER);
-		cd += ca;
-		if ( text.displayOutline ) {
-			strokeWeight(1);
-			stroke(text.color);
-		}
-		else {
-			noStroke();
-		}
-		fill(text.color[0],text.color[1],text.color[2],text.alpha);
-		rotateX(radians(angle));
-		rotateY(radians(angle));
-		// plane() sphere() cylinder() cone() ellipsoid()
-		// torus(shapeSize/2, shapeSize/5);
-		// cylinder(shapeSize/2,shapeSize);
-		// cone(shapeSize/2,shapeSize);
-		box(shapeSize);
-		cone(shapeSize*0.5)
-		shapeSize -= (mouseY - h / 2) * 0.0125;
-		angle += (mouseX - w / 2) * 0.0125;
-		if (shapeSize < 1) {
-			shapeSize = 0;
-		}
-		if (shapeSize > shapeMax) {
-			shapeSize = shapeMax;
-		}
-		
-	}
-	</script>
+  <head>
+    <title> Bounce </title>
+    <meta charset="utf-8" />
+    <script src="p5.min.js"></script>
+    <script src="p5.sound.min.js"></script>
+
+    <script>
+// Simple OOP example
+var sp; // Declare the object
+var spots =[];
+var numSpots =10;
+var gravity= 0.08;
+var friction= -0.9;
+var spring = 0.005;
+var offset = 0;
+var easing = 0.05;
+var bounce;
+var bounce1;
+//var img;
+   
+  function preload() {
+    soundFormats('mp3', 'ogg', 'wav');
+    bounce = loadSound("bounce.mp3");
+    bounce1 = loadSound("bounce1.mp3");
+  }
+function setup() {
+  w = windowWidth;
+  h = windowHeight;
+  createCanvas(w, h);
+  for(var i=0; i< numSpots; ++i){
+    red =random(256);
+    green =0;
+    blue =random(256);
+    alpha=random(256);
+    var c = color(red,green,blue, alpha);
+    spots[i] = new Spot(w/2,h/2,random(1,50),random(-7,7), random(-7,7),c,i);
+    
+   img = loadImage("https://mohannedsa.github.io/cojo2901/piano.jpg");  // Load an image into the program
+  }
+  stroke(255,255,255,100);
+}
+function mouseMoved(){
+    for(var i=0; i< numSpots; ++i){
+    spots[i].avoid();
+}
+}
+function mousePressed() {
+    bounce.play();
+    bounce1.play();
+  }
+function mouseDragged(){
+  numSpots++;
+   red =random(256);
+   green =0;
+   blue =random(256);
+   alpha=random(256);
+   var c = color(red,green,blue, alpha);
+    spots[numSpots-1] = new Spot(mouseX,mouseY,random(1,50),random(-7,7), random(-7,7),c,numSpots-1);
+}
+function draw() {  
+  background(0,0,0,15);
+  for(var i=0; i< numSpots; ++i){
+    spots[i].move();
+    spots[i].display();
+    spots[i].collide();
+  }
+   image(img, 0, 500);  // Display at full opacity
+  tint(200, 100);  // Display at half opacity
+ //image(img, offset, 0);
+  
+   if (keyIsDown(DOWN_ARROW)) {
+      if (numSpots > 0) {
+        numSpots--;
+      delete spots[numSpots];
+    }
+   } 
+   if (keyIsDown(UP_ARROW)){
+    if (numSpots >= 0) {
+        numSpots++;
+    red =random(256);
+    green =0;
+    blue =random(256);
+    alpha=random(256);
+    var c = color(red,green,blue, alpha);
+    spots[i] = new Spot(w/2,h/2,random(1,50),random(-7,7), random(-7,7),c,i);
+          count = numSpots++;
+    }
+   }
+   }
+  
+// function to define a class
+function Spot(xpos,ypos,diameter,xdir,ydir,scol,sid) {    
+  // Construct the object 
+  this.x = xpos;
+  this.y = ypos;
+  this.d = diameter;
+  this.xd= xdir;
+  this.yd= ydir;
+  this.c= scol;
+  this.sid = sid;
+ 
+  // method to display the object
+  this.display = function() {
+    fill(this.c);
+    var w8 = this.d * 0.125;
+    strokeWeight(w8);
+    ellipse(this.x,this.y,this.d,this.d);
+  }
+  this.move = function(){
+    this.x += this.xd;
+    this.y += this.yd;
+    this.yd += gravity;
+    var amp_x = map(abs(this.xd),0,7,0,1);
+    var amp_y = map(abs(this.yd),0,9,0,1);
+    var p = map(this.x,0,w,-1,1);
+    var f = map(this.d,1,50,4,0.5);
+    bounce.pan(p);
+    bounce.rate(f);
+    bounce1.pan(p);
+    bounce1.rate(f);
+    
+     if(this.x + this.d/2 > w ) {
+      this.x = w- this.d/2;
+      this.xd *= friction;
+      bounce.amp(amp_x);
+      bounce1.play();
+    }
+      if( this.x - this.d/2 < 0){
+      this.x = this.d/2;
+      this.xd *= friction;
+      bounce.amp(amp_x);
+      bounce1.play();
+    }
+    if(this.y + this.d/2 > h ) {
+      this.y = h-this.d/2;
+       this.yd *= friction;
+       bounce1.amp(amp_y);
+      bounce.play();
+    }
+    if( this.y - this.d/2 < 0){
+      this.y = this.d/2;
+      this.yd *= friction;
+      bounce1.amp(amp_y);
+      bounce.play();
+    }
+  }
+  this.avoid = function(){
+    if (abs(this.x - mouseX) < this.d/2 && abs(this.y-mouseY)<this.d/2){
+      this.xd = random(-7,7);
+      this.yd = random(0, -10);
+    }
+  }
+  this.collide = function() {
+      for ( var i=0; i < numSpots; ++i ) {
+        if ( this.sid != i ) {
+          var xdist = spots[i].x - this.x;
+          var ydist = spots[i].y - this.y;
+          var distance = sqrt(xdist**2 + ydist**2);
+          var minDist = spots[i].d/2 + this.d/2;
+          if ( distance < minDist ) {
+            var angle = atan2(xdist,ydist);
+            var targetX = this.x + cos(angle) * minDist;
+            var targetY = this.y + sin(angle) * minDist;
+            var ax = (targetX - spots[i].x) * spring;
+            var ay = (targetY - spots[i].y) * spring;
+            this.xd -= ax;
+            this.yd -= ay;
+            spots[i].xd += ax;
+            spots[i].yd += ay;
+          }
+        }
+      }
+    }
+    this.sticky_collide = function() {
+      for ( var i=0; i < numSpots; ++i ) {
+        if ( this.sid != i ) {
+          var xdist = abs(spots[i].x - this.x);
+          var ydist = abs(spots[i].y - this.y);
+          var arad = (spots[i].d + this.d)/2;
+          if ( xdist < arad && ydist < arad ) {
+            this.xd *= friction;
+            this.yd *= friction;
+            spots[i].xd *= friction;
+            spots[i].yd *= friction;
+          }
+        }
+      }
+}
+}
+  </script>
 </head>
-<body style="background: #000; margin:0;">
-</body>
+  <body>
+   
+  </body>
 </html>
