--- a/project3.html
+++ b/project3.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>HTML5 Bouncing Ball</title>
+	<title>MO Projects</title>
 	<script src="p5.min.js"></script>
 	<script src="dat.gui.min.js"></script>
 	<script>
