--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>HTML5 Bouncing Ball</title>
+<title>Mo Projects</title>
 <style type="text/css" scoped>
 .GeneratedText {
 font-family:'Comic Sans MS';font-size:2em;letter-spacing:0.2em;line-height:1.3em;color:#330099;background-color:#CCFFFF;padding:1.5em;
