--- a/project3.html
+++ b/project3.html
@@ -30,7 +30,7 @@
 
 function preload() {
     soundFormats('mp3', 'ogg', 'wav');
-    bounce = loadSound("music.mp3");
+    music = loadSound("music.mp3");
 
   }
 
