--- a/project3.html
+++ b/project3.html
@@ -51,8 +51,7 @@ function preload() {
 			this.alpha = 64;
 			this.frameRate = 60;
 			this.displayOutline = true;
-			this.music = text.music =! text.music 
-			gui.__controllers[7].upDateDisplay();
+			this.music = false;
 		
 			this.randomColor = function() { 
 				// define explode function
