--- a/project3.html
+++ b/project3.html
@@ -92,6 +92,12 @@ function preload() {
 			text.music =! text.music 
 			gui.__controllers[7].upDateDisplay();
 		}
+		
+		else if (key ==S){
+			!music.play();
+			text.music =! text.music 
+			gui.__controllers[7].upDateDisplay();
+		}
 	}
 	function draw() {
 		background(color(0,0,0,1));
