--- a/project3.html
+++ b/project3.html
@@ -94,8 +94,8 @@ function preload() {
 		}
 		
 		else if (key ==S){
-			!music.play();
-			text.music =! text.music 
+			music.play();
+			text.music == text.music 
 			gui.__controllers[7].upDateDisplay();
 		}
 	}
