--- a/project3.html
+++ b/project3.html
@@ -93,9 +93,9 @@ function preload() {
 			gui.__controllers[7].upDateDisplay();
 		}
 		
-		else if (key ==S){
-			music.play();
-			text.music == text.music 
+		else if (key ==r){
+			stop.music.play();
+			text.music =! text.music 
 			gui.__controllers[7].upDateDisplay();
 		}
 	}
