--- a/project3.html
+++ b/project3.html
@@ -93,7 +93,7 @@ function preload() {
 			gui.__controllers[7].upDateDisplay();
 		}
 		
-		else if (key ==r){
+		else if (key =='P'){
 			stop.music.play();
 			text.music =! text.music 
 			gui.__controllers[7].upDateDisplay();
