--- a/project3.html
+++ b/project3.html
@@ -88,9 +88,15 @@ function preload() {
 			gui.__controllers[3].upDateDisplay();
 		}
 		else if (key == 'p') {
-			music.play();
-			text.music =! text.music 
-			gui.__controllers[7].upDateDisplay();
+			if (!music.isPlaying()) {
+				music.loop();
+				text.music != text.music 
+				gui.__controllers[7].upDateDisplay();
+			else {
+				music.pause();
+				text.music != text.music 
+				gui.__controllers[7].upDateDisplay();
+			}
 		}
 	}
 	function draw() {
