--- a/project3.html
+++ b/project3.html
@@ -91,12 +91,12 @@ function preload() {
 			if (!music.isPlaying()) {
 				music.loop();
 				text.music != text.music 
-				gui.__controllers[7].updateDisplay(text.music);
+				gui.__controllers[7].updateDisplay();
 			}
 			else {
 				music.pause();
 				text.music != text.music 
-				gui.__controllers[7].updatedisplay(text.music);
+				gui.__controllers[7].updatedisplay();
 			}
 		}
 	}
