--- a/project3.html
+++ b/project3.html
@@ -96,7 +96,7 @@ function preload() {
 			else {
 				music.pause();
 				text.music != text.music 
-				gui.__controllers[7].updatedisplay();
+				gui.__controllers[7].updateDisplay();
 			}
 		}
 	}
