--- a/project3.html
+++ b/project3.html
@@ -24,6 +24,7 @@
 	var text;
 	var gui;
 	var fR;
+	var ms;	
 	
 
 	var music;
@@ -69,9 +70,9 @@ function preload() {
 		gui = new dat.GUI();
 		gui.add(text, 'message');
 		fR = gui.add(text, 'frameRate',5,60); // use for controller
-		mc = gui.add(text ,'music' );
 		gui.add(text, 'alpha', 0, 255);
 		gui.add(text, 'displayOutline');
+		mc = gui.add(text ,'music' );
 		gui.add(text, 'randomColor');
 		gui.addColor(text,'color');
 		gui.add(text,'float',0,1);
