--- a/project2.html
+++ b/project2.html
@@ -37,7 +37,7 @@ function setup() {
     var c = color(red,green,blue, alpha);
     spots[i] = new Spot(w/2,h/2,random(1,50),random(-7,7), random(-7,7),c,i);
     
-   img = loadImage("https://mohannedsa.github.io/cojo2901/piano.jpg");  // Load an image into the program
+   //img = loadImage("https://mohannedsa.github.io/cojo2901/piano.jpg");  // Load an image into the program
   }
   stroke(255,255,255,100);
 }
